--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
 		"kaplay": "^3001.0.19"
 	},
 	"devDependencies": {
+		"@eslint/js": "^10.0.1",
+		"@eslint/json": "^1.0.1",
 		"@types/node": "^25.3.2",
+		"eslint": "^10.0.2",
+		"globals": "^17.3.0",
 		"vite": "^7.3.1"
 	}
 }
