--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"devDependencies": {
 		"@eslint/js": "^10.0.1",
 		"@eslint/json": "^1.0.1",
+		"@rollup/rollup-linux-x64-gnu": "^4.59.0",
 		"@types/node": "^25.3.2",
 		"eslint": "^10.0.2",
 		"globals": "^17.3.0",
